# streamlit-flow

./: .gitignore  MANIFEST.in  README.md  build.sh  example_data.json  package-lock.json  pyproject.toml  setup.py
streamlit_flow/argo_flow/: __init__.py
streamlit_flow/argo_flow/frontend/: .babelrc  package-lock.json  package.json
streamlit_flow/argo_flow/frontend/src/: STArgoFlow.tsx  index.tsx
streamlit_flow/argo_workflow/: __init__.py
streamlit_flow/argo_workflow/frontend/: vite.config.ts
streamlit_flow/argo_workflow/frontend/src/: STArgoWorkflow.tsx  custom_style.css  icons.tsx  index.tsx
